[BUGFIX] Pagetree - Missing icons for expand/collapse whole branches
The expand/collapse context menu actions are missing icons.

Resolves: #M17924

--- a/typo3/sysext/t3skin/stylesheets/ie6/z_t3-icons-gifSprites.css
+++ b/typo3/sysext/t3skin/stylesheets/ie6/z_t3-icons-gifSprites.css
@@ -1,24 +1,24 @@
 
 .t3-icon-actions {
-	background-image: url('../../images/sprites/t3skin.gif?1299173272') !important;
+	background-image: url('../../images/sprites/t3skin.gif?1299799661') !important;
 	height: 16px;
 	width: 16px;
 }
 
 .t3-icon-apps {
-	background-image: url('../../images/sprites/t3skin.gif?1299173272') !important;
+	background-image: url('../../images/sprites/t3skin.gif?1299799661') !important;
 	height: 16px;
 	width: 16px;
 }
 
 .t3-icon-mimetypes {
-	background-image: url('../../images/sprites/t3skin.gif?1299173272') !important;
+	background-image: url('../../images/sprites/t3skin.gif?1299799661') !important;
 	height: 16px;
 	width: 16px;
 }
 
 .t3-icon-status {
-	background-image: url('../../images/sprites/t3skin.gif?1299173272') !important;
+	background-image: url('../../images/sprites/t3skin.gif?1299799661') !important;
 	height: 16px;
 	width: 16px;
 }
